--- a/src/temoto_ws/temoto_ws/CMakeLists.txt
+++ b/src/temoto_ws/temoto_ws/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(roscon_temoto_ws)
+project(temoto_ws)
 
 # use c++11 standard
 add_compile_options(-std=c++11)
