--- a/src/temoto_ws/temoto_ws/config/action_dst.yaml
+++ b/src/temoto_ws/temoto_ws/config/action_dst.yaml
@@ -1,5 +1,5 @@
 - package_name: temoto_core
   relative_path: ../actions/
 
-- package_name: roscon_temoto_ws
+- package_name: temoto_ws
   relative_path: ../actions/
